[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HUD/Pause.gd" type="Script" id=1]
[ext_resource path="res://Font/VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Pause Menu" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -40.0
margin_top = -17.0
margin_right = 1078.0
margin_bottom = 637.0
color = Color( 0.0980392, 0.0862745, 0.0862745, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 396.0
margin_top = 191.0
margin_right = 722.0
margin_bottom = 462.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 326.0
margin_bottom = 75.0

[node name="Resume" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 326.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "RESUME GAME"

[node name="Save" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 326.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
text = "SAVE GAME"

[node name="Load" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 326.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
text = "LOAD GAME"

[node name="Exit" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 326.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 2 )
text = "EXIT GAME"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
